objects/Route__c.object
<CustomObject>
    <description>Example object to house routes and routing of collections</description>
    <fields>
        <fullName>Collection_Cycle_Number__c</fullName>
        <description>The position of this route to be collected in the 28 day cycle (4 weeks, 7 day per week)</description>
        <label>Collection Cycle Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <label>Collection Date ( Obsolete? )</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cycle_Number__c</fullName>
        <description>The position of this route to be created in the 28 day cycle (4 weeks, 7 day per week)</description>
        <label>Fill Cycle Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Current Geolocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Next_Collection_Date__c</fullName>
        <formula>IF(Mod(TODAY() +1  - Origination_Date__c,28) &lt; Collection_Cycle_Number__c, TODAY() + Collection_Cycle_Number__c - Mod(TODAY()+1 - Origination_Date__c,28),
If(Mod(TODAY() +1  - Origination_Date__c,28) &gt; Collection_Cycle_Number__c, TODAY() + 28 - Mod(TODAY()+1 - Origination_Date__c,28) + Collection_Cycle_Number__c, TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Fill_Date__c</fullName>
        <formula>IF(Mod(TODAY() - Origination_Date__c,28) +1 = Cycle_Number__c, TODAY(), IF(Mod(TODAY() - Origination_Date__c,28) +1 &lt; Cycle_Number__c, TODAY() + Cycle_Number__c - (Mod(TODAY() - Origination_Date__c,28) +1), TODAY() + 27 - Mod(TODAY() - Origination_Date__c,28) + Cycle_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Normal_Fill_Cycle_Number__c</fullName>
        <description>Used as a temporary field to assist in mass changing fill cycle numbers temporarily for Holiday changes</description>
        <label>Normal Fill Cycle Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origination_Date__c</fullName>
        <defaultValue>Date(2021,10,18)</defaultValue>
        <description>Read only system field utilized for mapping 1-Mon routes to a live calendar date</description>
        <label>Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processing_Location__c</fullName>
        <label>Processing Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Accounts__c</fullName>
        <description>R/S</description>
        <label>Total Accounts</label>
        <summaryForeignKey>Route_Account__c.Route__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracker_ID__c</fullName>
        <label>Tracker ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Peoria_Public</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Peoria</value>
        </filters>
        <label>All Peoria</label>
    </listViews>
    <listViews>
        <fullName>Burr_Ridge_Additional</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Burr Ridge Additional</value>
        </filters>
        <label>Burr Ridge Additional</label>
    </listViews>
    <listViews>
        <fullName>Route_1</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <label>Burr Ridge Route 1</label>
    </listViews>
    <listViews>
        <fullName>Route_2</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 2</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>TEST</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <label>Burr Ridge Route 2</label>
    </listViews>
    <listViews>
        <fullName>Route_3</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 3</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Burr Ridge</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>Burr Ridge Route 3</label>
    </listViews>
    <listViews>
        <fullName>Tinley_Park_Additional</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Tinley Park Additional</value>
        </filters>
        <label>Tinley Park Additional</label>
    </listViews>
    <listViews>
        <fullName>Tinley_Park_Route_1</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 1</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>Tinley Park Route 1</label>
    </listViews>
    <listViews>
        <fullName>Tinley_Park_Route_2</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 2</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>Tinley Park Route 2</label>
    </listViews>
    <listViews>
        <fullName>Tinley_Park_Route_3</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 3</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>Tinley Park Route 3</label>
    </listViews>
    <listViews>
        <fullName>Tinley_Park_Route_4</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 4</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>Tinley Park Route 4</label>
    </listViews>
    <listViews>
        <fullName>Tinley_Park_Route_5</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Number__c</columns>
        <columns>Next_Fill_Date__c</columns>
        <columns>Collection_Cycle_Number__c</columns>
        <columns>Next_Collection_Date__c</columns>
        <columns>Total_Accounts__c</columns>
        <columns>Processing_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Route 5</value>
        </filters>
        <filters>
            <field>Processing_Location__c</field>
            <operation>equals</operation>
            <value>Tinley Park</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>Tinley Park Route 5</label>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>